Fix meta box help icon alignment (#2484)
* Fix meta box help icon alignment #1956

* Fix alignment for RTL languages #1956

--- a/css/modules/aioseop_module-rtl.css
+++ b/css/modules/aioseop_module-rtl.css
@@ -35,7 +35,6 @@
 	float: left;
 	padding-left: 0;
 	margin-right: 0;
-	margin-left: 64px
 }
 
 .aioseop_label {
