--- a/css/modules/aioseop_module.css
+++ b/css/modules/aioseop_module.css
@@ -83,7 +83,6 @@
 .aioseop_tabs .aioseop_meta_box_help,
 .aioseop_tabs .aioseop_meta_box_help:active {
 	margin-top: 4px;
-	margin-right: 45px;
 }
 
 .aioseop_label {
